<resources>
    <string name="app_name">Plan-It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_friends_list">Friends List</string>
    <string name="title_activity_create_event">Create Event</string>
    <string name="title_activity_view_event_actvity">View Event</string>
    <string name="title_activity_events_list">Events List</string>
    <string name="event_name">Event Name</string>
    <string name="event_owner">Event Owner</string>
    <string name="event_countdown">Countdown</string>
    <string name="event_description">Event Description</string>
    <string name="attending">Attending</string>
    <string name="invited">Invited</string>
    <string name="declined">Declined</string>
    <string name="owner">Owner</string>
    <string name="filterBy">Filter By</string>
    <string name="showAll">Show All</string>
    <string name="action_search">Search</string>
    <string name="past">Past</string>
    <string name="item">Item</string>
    <string name="supplying">Who is Supplying?</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="actual_cost">Actual Cost</string>
    <string name="total">Total</string>
    <string name="add_item">Add Item</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">SUBMIT</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_email">Please Enter Your Email</string>
    <string name="login">Login</string>
    <string name="email_user">Email/User</string>
    <string name="claim">Claim</string>
    <string name="split">Split</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_list">Item List</string>
</resources>
