<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:background="@drawable/back"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="match_parent"
        android:text="@string/item"
        android:id="@+id/item_list_text_item"
        android:textSize="15sp"/>
    <AbsoluteLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:background="@drawable/back">
        <Button
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/claim"
            android:id="@+id/item_list_text_supplying_button"
            android:textSize="15sp"
            android:visibility="invisible"
            android:clickable="true"/>
        <TextView
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/supplying"
            android:id="@+id/item_list_text_supplying"
            android:textSize="15sp"
            android:visibility="visible"
            android:clickable="true"/>
    </AbsoluteLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@drawable/back">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/estimated_cost"
            android:id="@+id/item_list_text_estimated_cost"
            android:textSize="15sp"/>
        <ImageView
            android:minWidth="20dp"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_blue_24dp"/>
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@drawable/back">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/actual_cost"
            android:id="@+id/item_list_text_estimated_actual_cost"
            android:textSize="15sp"/>
        <ImageView
            android:clickable="true"
            android:minWidth="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_blue_24dp"/>
    </LinearLayout>
</LinearLayout>